# oop

./: .gitignore  README.md
1/: CMakeLists.txt  lib.cpp
2/: CMakeLists.txt
3/: CMakeLists.txt
3/etc/: input.txt  old.txt
3/lib/: app.h  group.h  menu.h  stud.h  table.h  table.tcc
3/src/: app.cpp  group.cpp  main.cpp  menu.cpp  stud.cpp
3/tests/: tests.cpp
lab1/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
lab2/: CMakeLists.txt  card.cpp  card.h  card_tests.cpp  deck.cpp  deck.h  deck_tests.cpp  main.cpp  tests.cpp
lab3/: CMakeLists.txt  senior.cpp  stud.cpp  stud.h  templ.cpp  templ.h  uml.drawio
lab3/etc/: input.txt
lab3/lib/: app.h  group.h  stud.h  table.h  table.tcc
lab3/src/: app.cpp  group.cpp  main.cpp  menu.cpp  senior.cpp  stud.cpp  table.tcc
