cmake_minimum_required(VERSION 3.16)
project(oopcard)
add_compile_options(--coverage)
add_link_options(--coverage)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g")
add_library(card card.h card.cpp)
link_libraries(card)
add_library(deck deck.h deck.cpp)
link_libraries(deck)
add_executable(main main.cpp)
add_executable(testing tests.cpp)
